--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ blinker==1.4
 cached-property==1.3.0
 click==6.7
 Django==1.11
-django-bootstrap3==8.2.3
+
 django-haystack==2.4.0
 django-taggit==0.22.1
 django-braces
@@ -43,6 +43,8 @@ WTForms==2.1
 
 
 
-django-bootstrap3
+Django==1.11
+django-bootstrap3==8.2.3
 django-braces
 django-autoslug==1.9.3
+django-debug-toolbar==1.8
