--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,6 @@
-blinker==1.4
-cached-property==1.3.0
-click==6.7
-Django==1.11
-
-django-haystack==2.4.0
-django-taggit==0.22.1
-django-braces
-dnspython==1.15.0
-et-xmlfile==1.0.1
-exchangelib==1.9.2
-Flask==0.12.2
-Flask-Mail==0.9.1
-Flask-MySQLdb==0.2.0
-Flask-WTF==0.14.2
-future==0.16.0
-itsdangerous==0.24
-jdcal==1.3
-Jinja2==2.9.6
-lxml==3.7.3
-Markdown==2.6.8
-MarkupSafe==1.0
-mysqlclient==1.3.10
-ntlm-auth==1.0.2
-openpyxl==2.4.8
-ordereddict==1.1
-passlib==1.7.1
-psutil==5.2.2
-PyJWT==1.5.0
-pyshell==1.41b0
-PySocks==1.6.7
-pysolr==3.3.2
-pytz==2017.2
-requests==2.13.0
-requests-ntlm==1.0.0
-selenium==3.4.2
-six==1.10.0
-twilio==6.1.0a1
-tzlocal==1.4
-virtualenv==15.1.0
-Werkzeug==0.12.2
-WTForms==2.1
-
-
-
 Django==1.11
 django-bootstrap3==8.2.3
 django-braces
 django-autoslug==1.9.3
 django-debug-toolbar==1.8
+djangorestframework==3.6.3
